# CarLogger

./: .gitignore  Cargo.toml  README.md  car-logger.duckdb.wal
.github/workflows/: production-release.yml  release.yml
apps/car-logger-gui/: Cargo.toml  README.md  build.rs
apps/car-logger-gui/resources/: resources.gresource.xml
apps/car-logger-gui/resources/css/: style.css
apps/car-logger-gui/resources/po/: es.po  ja.po
apps/car-logger-gui/resources/ui/: can_id_manager_view.ui  dashboard.ui  settings_view.ui  sidebar.ui  window.ui
apps/car-logger-gui/src/: config.rs  dashboard.rs  live_dashboard.rs  localization.rs  main.rs  realtime_logging.rs  signal_decoder.rs  updater.rs
apps/car-logger-gui/src/ui/: ai_condition.rs  can_id_manager.rs  health.rs  log_charts.rs  mod.rs  settings.rs  sidebar.rs
crates/ai-worker/: Cargo.toml  README.md
crates/ai-worker/src/: lib.rs
crates/application/: Cargo.toml  README.md
crates/application/src/: connection.rs  lib.rs  pid_formula.rs  pid_scan.rs  realtime.rs  vehicle_dashboard.rs
crates/domain/: Cargo.toml  README.md
crates/domain/src/: lib.rs
crates/health/: Cargo.toml  README.md
crates/health/src/: ai_condition.rs  ai_features.rs  lib.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: ai.rs  ai_ui.rs  builtin_signals.rs  diagnostics.rs  duckdb.rs  health.rs  learning.rs  lib.rs  paths.rs  pid_logs.rs  repository.rs  retention.rs  sqlite.rs  vehicle_data.rs  vehicles.rs
crates/transport/: Cargo.toml  README.md
crates/transport/src/: lib.rs  replay.rs  serial.rs  socketcan_transport.rs
distribution/: THIRD_PARTY_LICENSES.md  build-runtime.sh  build-tensorflow-arm64.sh  generate-release-notes.sh  package-release.sh  requirements-aarch64-unknown-linux-gnu.txt  requirements-x86_64-unknown-linux-gnu.txt  sign-macos.sh  sign-windows.ps1  versions.env  write-manifest.sh
docs/: AI_RELEASE_AND_ACCEPTANCE.md  AUTO_UPDATE_AND_RELEASE.md
python/ai_worker/: pyproject.toml  run_worker.py
python/ai_worker/car_logger_ai_worker/: __init__.py  inference.py  training.py  worker.py
python/ai_worker/car_logger_ai_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/ai_worker/tests/: test_inference.py  test_worker.py
scripts/: update_standard_pid_definitions.sql
