[workspace]
resolver = "3"
members = [
    "apps/car-logger-gui",
    "crates/domain",
    "crates/application",
    "crates/transport",
    "crates/storage",
    "crates/health",
    "crates/ai-worker",
]
default-members = [
    "apps/car-logger-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
] }

# Date and identifiers
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = [
    "v4",
    "serde",
] }

# Thread communication
crossbeam-channel = "0.5"
dashmap = "6"

# GUI
gtk = { package = "gtk4", version = "0.11" }

# Serial communication
serialport = "4.9"

# SQLite
rusqlite = { version = "0.40", features = [
    "bundled",
    "chrono",
    "serde_json",
] }

# DuckDB
duckdb = { version = "1.10504.0", features = ["bundled"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
