[package]
name = "car-logger-gui"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crossbeam-channel.workspace = true
chrono.workspace = true
gtk.workspace = true
gio = { package = "gio", version = "0.20" }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
car-logger-domain = { path = "../../crates/domain" }
car-logger-application = { path = "../../crates/application" }
car-logger-transport = { path = "../../crates/transport" }
car-logger-storage = { path = "../../crates/storage" }

[build-dependencies]
glib-build-tools = "0.20"

[lints]
workspace = true
