[package]
name = "car-logger-application"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
serde.workspace = true
dashmap.workspace = true

car-logger-domain = { path = "../domain" }
car-logger-health = { path = "../health" }

[lints]
workspace = true
