[package]
name = "car-logger-transport"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
serialport.workspace = true

car-logger-domain = { path = "../domain" }
car-logger-application = { path = "../application" }

[target.'cfg(target_os = "linux")'.dependencies]
socketcan = "3.5"
embedded-can = "0.4"

[lints]
workspace = true
